fix: home page zooming causes horizontal overflow

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,13 +1,12 @@
 .home-page {
   height: 100vh;
-  width: 100vw;
   padding: 0;
   color: azure;
   background-color: #c2c2c2;
 
   // header
   .home-header {
-    padding: 1.5rem;
+    padding: 1rem 0;
     display: flex; // 横向排列
     justify-content: space-between; // 两端对齐
     align-items: center;
@@ -38,15 +37,14 @@
     margin-top: 1rem;
     font-size: 2.5rem;
     text-align: center;
-    padding-top: 3rem;
-    padding-bottom: 4rem;
+    padding-top: 5rem;
+    padding-bottom: 8rem;
   }
 
   // gallery
   .project-gallery {
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
     padding: 0;
     margin: 0;
   }
